@@ -111,7 +111,6 @@ Automne.server = {
 		if (options.evalJSon !== false && xml && xml.getElementsByTagName('jsoncontent').length) {
 			var jsonResponse = {};
 			try{
-				//eval('jsonResponse = '+xml.getElementsByTagName('jsoncontent').item(0).firstChild.nodeValue+';');
 				jsonResponse = Ext.decode(xml.getElementsByTagName('jsoncontent').item(0).firstChild.nodeValue);
 			} catch(e) {
 				jsonResponse = {};
